zengjia banner/banner/bannerDetail.html

--- a/pages/assistant/staff_center.html
+++ b/pages/assistant/staff_center.html
@@ -60,7 +60,7 @@
 
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="assign">授权</a>
-    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+    <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
 </script>
 <script type="text/html" id="switchTpl">
     <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
