--- a/pages/vip/vip_settingAdd.html
+++ b/pages/vip/vip_settingAdd.html
@@ -31,6 +31,13 @@
                        placeholder="会员名称" autocomplete="off" class="layui-input ">
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label"><span class="we-red">*</span>会员折扣</label>
+            <div class="layui-input-inline">
+                <input id="vip_weight" lay-verType="tips" type="number" name="vip_weight" lay-verify="required"
+                       placeholder="会员折扣" autocomplete="off" class="layui-input ">
+            </div>
+        </div>
 
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>会员折扣</label>
