--- a/pages/banner/banner/bannerList.html
+++ b/pages/banner/banner/bannerList.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
-    <title>房间类型管理</title>
+    <title>横幅管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -15,13 +14,19 @@
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        .laytable-cell-1-banner_images{
+            height: 100%;
+            max-width: 100%;
+        }
+    </style>
 </head>
 
 <body>
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
         <a>
-          <cite>房间类型管理</cite></a>
+          <cite>横幅管理</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right"
        href="javascript:location.replace(location.href);" title="刷新">
@@ -30,22 +35,21 @@
 
 <div class="weadmin-body">
     <div class="layui-row">
-        <form class="layui-form layui-col-md12 we-search">
-            房间类型搜索：
+        <!-- <form class="layui-form layui-col-md12 we-search">
 
-            <div class="layui-inline">
-                <input id="roomstyle" type="text" name="search" placeholder="请输入房间类型名称" autocomplete="off" class="layui-input">
-            </div>
-            <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
-        </form>
+             标签搜索：
+             <div class="layui-inline">
+                 <input id="tagsname" type="text" name="search" placeholder="请输入标签名字" autocomplete="off" class="layui-input">
+             </div>
+             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
+         </form>-->
     </div>
     <div class="weadmin-block">
-        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>onclick="AddHotel('创建酒店','./HotelAdd.html',800,600)"-->
         <button class="layui-btn" id="add" ><i class="layui-icon"></i>添加
         </button>
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
-    <table class="layui-table" id="list" lay-filter="list">
+    <table class="layui-table" id="lists" lay-filter="lists">
 
     </table>
     <div id="page">
@@ -54,14 +58,18 @@
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="room_style_manage.js" type="text/javascript" charset="utf-8"></script>
+<script src="bannerList.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
-    <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script type="text/html" id="switchTpl">
-    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
+    <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_show}}" lay-skin="switch" lay-text="显示|未显示" lay-filter="is_show" {{ d.is_show? 'checked' : '' }}>
+</script>
+<script type="text/html" id="imgTpl">
+    <img   name="is_active" src="{{d.banner_images}}" style="height: 100px" >
 </script>
 </body>
 
