--- a/pages/goods/GoodsAdd.html
+++ b/pages/goods/GoodsAdd.html
@@ -53,8 +53,8 @@
             <div class="layui-inline" id="price_div">
                 <label class="layui-form-label">商品价格</label>
                 <div class="layui-input-inline">
-                    <input id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"
-                           placeholder="商品价格" autocomplete="off" class="layui-input ">
+                    <input id="goods_price" lay-verType="tips" type="number" name="goods_price"
+                           placeholder="商品价格" autocomplete="off" class="layui-input " value="0">
                 </div>
             </div>
             <div class="layui-inline layui-hide" id="need_div">
@@ -76,7 +76,7 @@
         <div class="layui-form-item layui-hide"  id="special_div">
             <label class="layui-form-label">会员选择</label>
             <div class="layui-input-inline">
-                <select name="vip_info" id="vip_info" lay-verify="required" lay-filter="pid-select">
+                <select name="vip_info" id="vip_info"  lay-filter="pid-select">
                 </select>
             </div>
         </div>
@@ -95,6 +95,7 @@
                     <p id="demoText"></p>
                     <button type="button" style="margin-top: 5px" class="layui-btn" id="test2">选择展示照片</button>
                 </div>
+                <input type="hidden" name="cover_image" id="cover_image" value=""/>
             </div>
         </div>
         <div class="layui-form-item">
@@ -121,7 +122,7 @@
             </div>
         </div>
         <input type="hidden" name="hotelnum" value="0"/>
-        <input type="hidden" name="cover_image" id="cover_image" value=""/>
+
     </form>
 </div>
 
