--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -174,6 +174,11 @@
                 </div>
             </div>
         </div>
+              <div class="layui-form-item layui-hide" id="refund_button_div">
+            <div class="layui-input-block">
+                <button class="layui-btn" lay-submit="" lay-filter="refund">退款</button>
+            </div>
+        </div>
 </span>
         <hr class="layui-bg-green">
         <div class="layui-form-item">
@@ -185,7 +190,19 @@
         <div class="layui-form-item">
             <label class="layui-form-label">店家备注</label>
             <div class="layui-input-block">
-                <input id="operator_remark" class="layui-input ">
+                <select name="order_status" id="order_status"  lay-filter="search">
+                    <option value=""></option>
+                    <option value="10">未支付</option>
+                    <option value="15">待发货</option>
+                    <option value="20">待收货</option>
+                    <option value="35">完成待评价</option>
+                    <option value="40">完成并且已评价</option>
+                    <option value="45">已取消</option>
+                    <option value="50">待退款</option>
+                    <option value="55">退款中</option>
+                    <option value="69">已退款</option>
+                    <option value="65">已过期</option>
+                </select>
             </div>
         </div>
         <div class="layui-form-item">
