--- a/pages/assistant/assignList.html
+++ b/pages/assistant/assignList.html
@@ -41,8 +41,8 @@
     </div>
     <div class="weadmin-block">
 
-        <button class="layui-btn" onclick="WeAdminShow('新建管理员','./StaffAdd.html')"><i class="layui-icon"></i>添加
-        </button>
+        <!--<button class="layui-btn" onclick="WeAdminShow('新建管理员','./StaffAdd.html')"><i class="layui-icon"></i>添加-->
+        <!--</button>-->
         <span   class="fr" style="line-height:40px">共有数据： <span  id ="total">0</span> 条</span>
     </div>
     <table class="layui-table" id="staffList" lay-filter="staffList">
@@ -60,7 +60,7 @@
 
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/编辑</a>
     <!--<a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="assign">授权</a>-->
-    <!--<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>-->
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="assign">授权</a>
 </script>
 <script type="text/html" id="switchTpl">
     <input type="checkbox" disabled="disabled" name="is_active" value="{{d.is_active}}" lay-skin="switch" lay-text="启用|禁用" lay-filter="is_active" {{ d.is_active? 'checked' : '' }}>
