--- a/pages/order/marketRefundedDetail.html
+++ b/pages/order/marketRefundedDetail.html
@@ -180,13 +180,23 @@
             </div>
         </div>
 </span>
-        <!--<hr class="layui-bg-green">-->
-        <!--<div class="layui-form-item">-->
-            <!--<label class="layui-form-label">订单状态</label>-->
-            <!--<div class="layui-input-inline">-->
-                <!--<input id="change_order_status_display" class="layui-input">-->
-            <!--</div>-->
-        <!--</div>-->
+        <div class="site-title">
+            <fieldset>
+                <legend><a name="ignore">退款</a></legend>
+            </fieldset>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">退款金额</label>
+            <div class="layui-input-inline">
+                <input id="refunded_money"type="number" step="0.01" value="0" class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">退还积分</label>
+            <div class="layui-input-inline">
+                <input id="refunded_integral"type="number"  value="0" class="layui-input ">
+            </div>
+        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">店家备注</label>
             <div class="layui-input-block">
