--- a/pages/order/hotelOrderDetail.html
+++ b/pages/order/hotelOrderDetail.html
@@ -201,14 +201,16 @@
                 <select name="order_status" id="order_status" lay-filter="search">
                     <option value=""></option>
                     <option value="10">待支付</option>
-                    <option value="20">待入住</option>
+                    <option value="25">待入住</option>
                     <option value="30">入住中</option>
                     <option value="35">完成待评价</option>
                     <option value="40">完成并且已评价</option>
-                    <option value="40">取消</option>
+                    <option value="45">取消</option>
+                    <option value="46">申请退款</option>
                     <option value="50">待退款</option>
                     <option value="55">退款中</option>
-                    <option value="69">已退款</option>
+                    <option value="60">已退款</option>
+                    <option value="61">拒绝退款</option>
                     <option value="65">已过期</option>
                 </select>
             </div>
