--- a/pages/order/hotelOrderList.html
+++ b/pages/order/hotelOrderList.html
@@ -15,14 +15,9 @@
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<!--ORDER_STATUS = (-->
-<!--(10, '未支付'),-->
-<!--(20, '待发货'),-->
-<!--(30, '待收货'),-->
-<!--(40, '已完成'),-->
-<!--(50, '已取消'),-->
-<!--(60, '等待评价'),-->
-<!--(70, '评价完成')  # 评价完成后才有积分-->
+<!--返回所有订单信息 ORDER_STATUS = ( (10, '待支付'), (25, '待入住'), (30, '入住中'), (35, '完成待评价'),
+(40, '完成并且已评价'), (45, '取消'),
+(46, '申请退款'), (50, '待退款'), (55, '退款中'), (60, '已退款'), (61, '拒绝退款'), (65, '已过期') )-->
 <body>
 <div class="weadmin-nav">
 			<span class="layui-breadcrumb">
@@ -44,14 +39,16 @@
                 <select name="order_status" id="order_status"  lay-filter="search">
                     <option value=""></option>
                     <option value="10">待支付</option>
-                    <option value="20">待入住</option>
+                    <option value="25">待入住</option>
                     <option value="30">入住中</option>
                     <option value="35">完成待评价</option>
                     <option value="40">完成并且已评价</option>
-                    <option value="40">取消</option>
+                    <option value="45">取消</option>
+                    <option value="46">申请退款</option>
                     <option value="50">待退款</option>
                     <option value="55">退款中</option>
-                    <option value="69">已退款</option>
+                    <option value="60">已退款</option>
+                    <option value="61">拒绝退款</option>
                     <option value="65">已过期</option>
                 </select>
             </div>
