--- a/pages/order/hotelRefundedDetail.html
+++ b/pages/order/hotelRefundedDetail.html
@@ -199,7 +199,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">退款金额</label>
             <div class="layui-input-inline">
-                <input id="refunded_money"type="number" value="0" class="layui-input ">
+                <input id="refunded_money"type="number" step="0.01" value="0" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
