--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -184,15 +184,19 @@
             <label class="layui-form-label">订单状态</label>
             <div class="layui-input-inline">
                 <select name="order_status" id="order_status" lay-filter="search">
+                    <option value=""></option>
                     <option value="10">未支付</option>
                     <option value="15">待发货</option>
                     <option value="20">待收货</option>
-                    <option value="35">完成待评价</option>
-                    <option value="40">完成并且已评价</option>
-                    <option value="45">已取消</option>
+                    <option value="35">待评价</option>
+                    <option value="40">已评价</option>
+                    <option value="45">取消</option>
+                    <option value="46">申请退款</option>
+                    <option value="48">填写退货信息</option>
                     <option value="50">待退款</option>
                     <option value="55">退款中</option>
-                    <option value="69">已退款</option>
+                    <option value="60">已退款</option>
+                    <option value="61">退款失败</option>
                     <option value="65">已过期</option>
                 </select>
             </div>
