--- a/pages/order/market_dealApply.html
+++ b/pages/order/market_dealApply.html
@@ -42,7 +42,7 @@
     <div class="layui-inline" >
         <label class="layui-form-label" style="margin-left: 20px">退款收货人</label>
         <div class="layui-input-inline" >
-            <input id="refunded_name" type="text" name="consignee_name"
+            <input id="refunded_name" type="text" name="refunded_name"
                    class="layui-input"
                    >
         </div>
@@ -58,14 +58,14 @@
 <div class="layui-form-item">
     <label class="layui-form-label" style="width:100px">退款收货地址</label>
     <div class="layui-input-block" style="margin-left: 130px">
-        <input id="refunded_address" class="layui-input" >
+        <input id="refunded_address"  name="refunded_address" class="layui-input" >
     </div>
 </div>
 </span>
         <div class="layui-form-item">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-block" style="margin-left: 130px">
-                <input id="remark" class="layui-input ">
+                <input id="remark"  name="remark" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
