--- a/pages/order/marketOrderList.html
+++ b/pages/order/marketOrderList.html
@@ -79,7 +79,11 @@
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script src="marketOrderList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看/修改</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
+    {{#  if(d.order_status==15){ }}
+    <a class="layui-btn layui-btn-xs" lay-event="confirm">确认订单</a>
+    {{#  } else { }}
+    {{#  } }}
 </script>
 </body>
 
