--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -175,41 +175,15 @@
             </div>
         </div>
 </span>
-        <div class="site-title">
-            <fieldset>
-                <legend><a name="ignore">修改订单状态</a></legend>
-            </fieldset>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">订单状态</label>
-            <div class="layui-input-inline">
-                <select name="order_status" id="order_status" lay-filter="search">
-                    <option value=""></option>
-                    <option value="10">未支付</option>
-                    <option value="15">待发货</option>
-                    <option value="20">待收货</option>
-                    <option value="35">待评价</option>
-                    <option value="40">已评价</option>
-                    <option value="45">取消</option>
-                    <option value="46">申请退款</option>
-                    <option value="48">填写退货信息</option>
-                    <option value="50">待退款</option>
-                    <option value="55">退款中</option>
-                    <option value="60">已退款</option>
-                    <option value="61">退款失败</option>
-                    <option value="65">已过期</option>
-                </select>
-            </div>
-        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">店家备注</label>
             <div class="layui-input-block">
-                <input id="operator_remark" class="layui-input ">
+                <input id="operator_remark" class="layui-input "readonly>
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                <button  id="send_order" class="layui-btn layui-hide" lay-submit="" lay-filter="add">发货</button>
                 <button id="close" class="layui-btn layui-btn-primary">关闭</button>
             </div>
         </div>
