--- a/pages/order/marketOrderList.html
+++ b/pages/order/marketOrderList.html
@@ -81,7 +81,7 @@
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     {{#  if(d.order_status==15){ }}
-    <a class="layui-btn layui-btn-xs" lay-event="confirm">确认订单</a>
+    <a class="layui-btn layui-btn-xs" lay-event="confirm">发货</a>
     {{#  } else { }}
     {{#  } }}
 </script>
