--- a/pages/composite/comment/commentList.html
+++ b/pages/composite/comment/commentList.html
@@ -60,13 +60,13 @@ COMMENT_LEVEL = (
                     <option value="20">住宿订单</option>
                 </select>
             </div>
-            显示方式：
+            审核状态：
             <div class="layui-inline">
 
                 <select name="comment_show" id="comment_show" >
                     <option value=""></option>
-                    <option value="10">评论人可见</option>
-                    <option value="20">所有人可见</option>
+                    <option value="10">仅自己可见</option>
+                    <option value="20">审核通过</option>
                 </select>
             </div>
             <button class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
