--- a/pages/composite/comment/commentDetail.html
+++ b/pages/composite/comment/commentDetail.html
@@ -53,7 +53,7 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">显示方式</label>
+                <label class="layui-form-label">审核状态</label>
                 <div class="layui-input-inline">
                     <input id="comment_show_display" type="text" name="comment_show_display"
                            class="layui-input nochange"
@@ -100,20 +100,20 @@
         <span id="change_div">
              <div class="site-title">
             <fieldset>
-                <legend><a name="ignore">修改显示方式</a></legend>
+                <legend><a name="ignore">修改审核状态</a></legend>
             </fieldset>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">显示方式</label>
+            <label class="layui-form-label">审核状态</label>
             <div class="layui-input-inline">
                 <select name="comment_show" id="comment_show" lay-filter="comment_show" >
-                    <option value="10">评论人可见</option>
-                    <option value="20">所有人可见</option>
+                    <option value="10">仅自己可见</option>
+                    <option value="20">审核通过</option>
                 </select>
             </div>
         </div>
         <div class="layui-form-item layui-hide" id="noshow_div">
-            <label class="layui-form-label">不显示原因</label>
+            <label class="layui-form-label">不通过原因</label>
             <div class="layui-input-block">
                 <input id="no_show_reason" type="text" name="no_show_reason"
                        class="layui-input " readonly>
