--- a/pages/composite/comment/commentDetail.html
+++ b/pages/composite/comment/commentDetail.html
@@ -92,7 +92,7 @@
         </div>
 
         </span>
-        <div class="layui-form-item" id="reply_button">
+        <div class="layui-form-item layui-hide" id="reply_button">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="" lay-filter="replyComment">回复评论</button>
             </div>
