--- a/pages/order/marketRefundedDetail.html
+++ b/pages/order/marketRefundedDetail.html
@@ -80,7 +80,6 @@
         </div>
 
 
-
         <div class="layui-form-item">
             <label class="layui-form-label">用户备注</label>
             <div class="layui-input-block">
@@ -109,7 +108,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">联系人姓名</label>
                 <div class="layui-input-inline">
-                    <input id="market_order_contact_consignee_name" type="text" name="consignee_name" class="layui-input nochange"
+                    <input id="market_order_contact_consignee_name" type="text" name="consignee_name"
+                           class="layui-input nochange"
                            readonly>
                 </div>
             </div>
@@ -128,7 +128,7 @@
             </div>
         </div>
 
-        <span id="pay_div" >
+        <span id="pay_div">
         <div class="site-title">
             <fieldset>
                 <legend><a name="ignore">付款信息</a></legend>
@@ -180,6 +180,7 @@
             </div>
         </div>
 </span>
+        <span id="span_refunded" class="layui-hide">
         <div class="site-title">
             <fieldset>
                 <legend><a name="ignore">退款</a></legend>
@@ -188,13 +189,13 @@
         <div class="layui-form-item">
             <label class="layui-form-label">退款金额</label>
             <div class="layui-input-inline">
-                <input id="refunded_money"type="number" step="0.01" value="0" class="layui-input ">
+                <input id="refunded_money" type="number" step="0.01" value="0" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">退还积分</label>
             <div class="layui-input-inline">
-                <input id="refunded_integral"type="number"  value="0" class="layui-input ">
+                <input id="refunded_integral" type="number" value="0" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
@@ -203,9 +204,10 @@
                 <input id="operator_remark" class="layui-input ">
             </div>
         </div>
+            </span>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="" id="refunded_button" lay-filter="add">确认退款</button>
+                <!--<button class="layui-btn" lay-submit="" id="refunded_button" lay-filter="add">确认退款</button>-->
                 <button id="close" class="layui-btn layui-btn-primary">关闭</button>
             </div>
         </div>
