--- a/pages/order/marketRefundedList.html
+++ b/pages/order/marketRefundedList.html
@@ -26,18 +26,7 @@
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
 </div>
-<!--(10, '待支付'),
-(15, '待发货'),
-(20, '待收货')
-(25, '待入住'),
-(30, '入住中'),
-(35, '完成待评价'),
-(40, '完成并且已评价'),
-(45, '取消'),
-(50, '待退款'),
-(55, '退款中'),
-(69, '已退款'),
-(65, '已过期')-->
+
 <div class="weadmin-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 we-search">
@@ -68,11 +57,11 @@
 <script src="../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script src="marketRefundedList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看/修改</a>
+    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     {{#  if(d.order_status==46){ }}
     <a class="layui-btn layui-btn-xs" lay-event="edit">处理退款申请</a>
-    {{#  } else { }}
-    <!--{{d.goods_price}}{{'元'}}-->
+    {{#  } else if(d.order_status==50){ }}
+    <a class="layui-btn layui-btn-xs" lay-event="refunded">退款</a>
     {{#  } }}
 
 
