--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -37,7 +37,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>联系电话</label>
             <div class="layui-input-inline">
-                <input id="tel" lay-verType="tips" type="tel" name="tel" lay-verify="required"
+                <input id="tel" lay-verType="tips" type="tel" name="tel" lay-verify="phone"
                        jq-error="请输入酒店联系电话" placeholder="请输入酒店联系电话" autocomplete="off"
                        class="layui-input ">
             </div>
