--- a/pages/order/hotelRefundedList.html
+++ b/pages/order/hotelRefundedList.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>酒店订单列表</title>
+    <title>酒店退款订单列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -28,7 +28,7 @@
 			<span class="layui-breadcrumb">
 
         <a>
-          <cite>酒店订单列表</cite></a>
+          <cite>酒店退款订单列表</cite></a>
       </span>
     <a class="layui-btn layui-btn-sm" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
         <i class="layui-icon" style="line-height:30px">&#x1002;</i></a>
