--- a/pages/order/marketOrderDetail.html
+++ b/pages/order/marketOrderDetail.html
@@ -80,7 +80,6 @@
         </div>
 
 
-
         <div class="layui-form-item">
             <label class="layui-form-label">用户备注</label>
             <div class="layui-input-block">
@@ -109,7 +108,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">联系人姓名</label>
                 <div class="layui-input-inline">
-                    <input id="market_order_contact_consignee_name" type="text" name="consignee_name" class="layui-input nochange"
+                    <input id="market_order_contact_consignee_name" type="text" name="consignee_name"
+                           class="layui-input nochange"
                            readonly>
                 </div>
             </div>
@@ -128,6 +128,28 @@
             </div>
         </div>
 
+        <span id="order_express" class="layui-hide">
+             <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+            <legend>快递信息</legend>
+        </fieldset>
+             <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">快递单号</label>
+                <div class="layui-input-inline">
+                    <input id="order_express_express_id" type="text" name="express_id" class="layui-input "
+                           readonly>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">快递名称</label>
+                <div class="layui-input-inline">
+                    <input id="order_express_express_name" type="text" name="express_name"
+                           class="layui-input " readonly>
+                </div>
+            </div>
+        </div>
+
+        </span>
         <span id="pay_div" class="layui-hide">
         <div class="site-title">
             <fieldset>
@@ -178,12 +200,12 @@
         <div class="layui-form-item">
             <label class="layui-form-label">店家备注</label>
             <div class="layui-input-block">
-                <input id="operator_remark" class="layui-input "readonly>
+                <input id="operator_remark" class="layui-input " readonly>
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button  id="send_order" class="layui-btn layui-hide" lay-submit="" lay-filter="add">发货</button>
+                <button id="send_order" class="layui-btn layui-hide" lay-submit="" lay-filter="add">发货</button>
                 <button id="close" class="layui-btn layui-btn-primary">关闭</button>
             </div>
         </div>
