--- a/pages/systemSetting/opinions/opinionsDetail.html
+++ b/pages/systemSetting/opinions/opinionsDetail.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">提交</label>
+            <label class="layui-form-label">提交时间</label>
             <div class="layui-input-inline">
                 <input  id="create_time"  text="text" class="layui-input ">
             </div>
