--- a/pages/order/hotelRefundedList.html
+++ b/pages/order/hotelRefundedList.html
@@ -68,6 +68,18 @@
 <script src="hotelRefundedList.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-xs" lay-event="edit">查看/修改</a>
+    {{#  if((d.order_status==55&&d.order_refunded.refunded_status==40)||(d.order_status==55&&d.order_refunded.refunded_status==30)){ }}
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="retry">重试</a>
+    {{#  } else { }}
+    {{#  } }}
+    <!---->
+</script>
+<script type="text/html" id="titleTpl">
+    {{#  if(d.order_refunded){ }}
+    {{d.order_refunded.refunded_status_display}}
+    {{#  } else { }}
+
+    {{#  } }}
 </script>
 </body>
 
