--- a/pages/order/marketRefundedDetail.html
+++ b/pages/order/marketRefundedDetail.html
@@ -180,6 +180,41 @@
             </div>
         </div>
 </span>
+        <span id="refunded_span" class="layui-hide">
+        <div class="site-title">
+            <fieldset>
+                <legend><a name="ignore">退款情况</a></legend>
+            </fieldset>
+        </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
+            <label class="layui-form-label">退款状态</label>
+            <div class="layui-input-inline">
+                <input id="order_refunded_refunded_status_display" class="layui-input " readonly>
+            </div>
+                </div>
+                <div class="layui-inline">
+                     <label class="layui-form-label">退款金额</label>
+            <div class="layui-input-inline">
+                <input id="order_refunded_refunded_money" type="number" step="0.01" value="0" class="layui-input "
+                       readonly>
+            </div>
+                </div>
+        </div>
+            <div class="layui-form-item">
+ <label class="layui-form-label">到账时间</label>
+            <div class="layui-input-inline">
+                <input id="order_refunded_refunded_account" class="layui-input " readonly>
+            </div>
+        </div>
+             <div class="layui-form-item">
+            <label class="layui-form-label">退款信息</label>
+            <div class="layui-input-block">
+                <input id="order_refunded_refunded_message" class="layui-input " readonly>
+            </div>
+        </div>
+
+        </span>
         <span id="span_refunded" class="layui-hide">
         <div class="site-title">
             <fieldset>
