--- a/pages/order/marketRefundedDetail.html
+++ b/pages/order/marketRefundedDetail.html
@@ -194,18 +194,34 @@
             </div>
                 </div>
                 <div class="layui-inline">
+ <label class="layui-form-label">到账时间</label>
+            <div class="layui-input-inline">
+                <input id="order_refunded_refunded_account" class="layui-input " readonly>
+            </div>
+                </div>
+
+        </div>
+            <div class="layui-form-item">
+                <div class="layui-inline">
                      <label class="layui-form-label">退款金额</label>
             <div class="layui-input-inline">
                 <input id="order_refunded_refunded_money" type="number" step="0.01" value="0" class="layui-input "
                        readonly>
             </div>
                 </div>
-        </div>
-            <div class="layui-form-item">
- <label class="layui-form-label">到账时间</label>
+                <div class="layui-inline">
+            <label class="layui-form-label">退还积分</label>
             <div class="layui-input-inline">
-                <input id="order_refunded_refunded_account" class="layui-input " readonly>
+                <input id="order_refunded_refunded_integral" class="layui-input " readonly>
             </div>
+                </div>
+                 <div class="layui-inline">
+            <label class="layui-form-label">退还零钱</label>
+            <div class="layui-input-inline">
+                <input id="order_refunded_refunded_free_money" class="layui-input " readonly>
+            </div>
+                </div>
+
         </div>
              <div class="layui-form-item">
             <label class="layui-form-label">退款信息</label>
